# python-blueprints

./: LICENSE  README.md  pyproject.toml
diff-utils/: CompareDiffSQL.py
excel-tools/: ExcelUtils.py
jira/: JiraUtils.py
src/python_blueprints/: __init__.py
src/python_blueprints/azure_blueprints/: azure_data_tables_service.py
src/python_blueprints/jira_blueprint/: jira_service.py
xml/: SaxParserUtil.py  XMLReportParser.py
xml-tools/: SaxParserConsumer.py  XMLReportParser.py
