[tool.poetry]
name = "py-toolbox"
version = "0.1.0"
description = ""
authors = ["canberkc <3777461+canberkc@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.19.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
