[project]
name = "python-blueprints"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jira",
    "azure-data-tables",
    "pymupdf",
    "openpyxl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
